# aurora-mcp

./: .gitignore  AURORA.html  Dockerfile  INSTALL.md  INSTALL_VERIFICATION.md  LIMITATIONS.md  README.md  SECURITY.md  TUTORIAL_VIDEO_ADS.html  aurora-skill.md  e2e_bypass.py  e2e_live.py  e2e_probe.py  operator_console.html  pyproject.toml  render.yaml  requirements.txt
aurora_model_defaults/: gpt_image_2.yaml
aurora_prompt_library/sports_world_mundial/: 01_fan_jersey_genesis.txt  02_player_hero_genesis.txt  03_match_ball_prop_genesis.txt  04_trophy_prop_genesis.txt  05_coach_genesis.txt  _metadata.yaml
aurora_prompt_library/templates/: genesis_portrait_base.txt
platform_capabilities/: higgsfield_platform_capabilities.yaml
schema/: aurora_schema.sql
scripts/: attest_probe.py  decision_probe.py  deploy_check.py  halt_probe.py  init_db.py  lint_probe.py  validate_libsql.py
templates/: anchor_strategy.yaml  benchmark_pack.yaml  biomechanical_motion_plan.yaml  character_sheet.yaml  domain_session_lock.yaml  elements_registry.yaml  execution_pack.md.jinja  image_brief.yaml  location_sheet.yaml  product_sheet.yaml  prop_sheet.yaml  scene_bible.yaml  shot_list.yaml  video_brief.yaml
tests/: test_attestation.py  test_aurora_spec.py  test_bypass_handler.py  test_coherence.py  test_consumed_tokens.py  test_db.py  test_decision_sheet.py  test_gate_preproduction_packet.py  test_genesis_policy.py  test_persistence_v22.py  test_prompt_lint.py  test_research_v23.py  test_rotating_auth.py  test_security_halt.py  test_status_feed.py  test_totp.py  totp_crosscheck.mjs
(+52 files in other folders)
