[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora"
version = "0.1.0"
description = "AURORA - Visual Production AI Orchestration (Sprint 1)"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "pydantic>=2",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
